# pySigma-backend-logscale

./: README.md  pyproject.toml
sigma/backends/logscale/: __init__.py  logscale.py
sigma/pipelines/logscale/: 21-common_ecs_fields-dns.yml  21-common_ecs_fields-network.yml  21-common_ecs_fields-windows.yml  21-common_ecs_fields.yml  __init__.py  logscale.py
tests/: test_backend_logscale.py  test_pipelines_logscale.py
