[tool.poetry]
name = "pySigma-backend-logscale"
version = "0.1.0"
description = "pySigma logscale lql backend"
authors = ["shadejinx <github.shadejinx.0gqn5@slmail.me>"]
license = "LGPL-3.0-only"
repository = "https://github.com/shadejinx/pySigma-backend-logscale"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.8"
pysigma = "^0.11.3"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
pytest-cov = "^4.1.0"
coverage = "^7.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
